@@ -16,3 +16,4 @@ Tyberius Prime <tyberius_prime@coonabibba.de>      Bug reporter and contribute p
 swordsp <sparas2006@gmail.com>                     Bug reporter and change suggestion
 mikem <mjmaher@iol.ie>                             Commit pylint_plugin
 魏振 <etggy@163.com>                               Provide php.acp
+Hawker                                             Linux memory display patch
